--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es5", 
     "module": "commonjs",
+    "jsx": "react",
+    "lib": ["es2015", "dom"],
     "strict": true,
     "esModuleInterop": true,
     "sourceMap": true,
