--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "esModuleInterop": true,
     "sourceMap": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": ["src/types", "node_modules/@types"],
+    "baseUrl": "./",
+    "paths": {
+      "images/*": ["public/images/*"],
+    }
   }
 }
