--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "file-loader": "^5.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
