--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "tsc": "tsc --noEmit true"
+    "tsc": "tsc --noEmit true",
+    "dev": "node_modules/.bin/webpack-dev-server"
   },
   "dependencies": {
     "react": "^16.13.0",
@@ -19,6 +20,7 @@
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.1",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   }
 }
