--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "tsc": "tsc --noEmit true",
     "dev": "node_modules/.bin/webpack-dev-server",
-    "eslint": "eslint --ext .tsx,.ts src/**"
+    "eslint": "eslint --fix --ext .tsx,.ts src/**"
   },
   "dependencies": {
     "react": "^16.13.0",
@@ -20,10 +20,13 @@
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.19.1",
     "ts-loader": "^6.2.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
