--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "tsc": "tsc --noEmit true",
     "dev": "node_modules/.bin/webpack-dev-server",
-    "eslint": "eslint --fix --ext .tsx,.ts src/**"
+    "eslint": "eslint --fix --ext .tsx,.ts src/**",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^16.13.0",
@@ -15,6 +16,7 @@
     "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.4",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
@@ -26,7 +28,9 @@
     "eslint-plugin-react-hooks": "^2.5.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
